<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="set"
            type="com.example.gt_companion_app.data.local.sets.SetWithAthleteScores" />
    </data>
    <LinearLayout
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/card"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.sets.SetDetailSmallFragment"
        android:padding="10dp">
        <TextView
            android:id="@+id/setDetail_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@{set.parseName()}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/blue_300" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setDetail_athlete1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ic_circle_medium"
                android:contentDescription="@string/setDetail_athlete1_contentDescription"
                android:gravity="center"
                android:text="@{set.parseAthleteInitials(0)}"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/setDetail_scoreAthlete1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="1"
                android:text="@{set.parseScoreAthlete(0)}"
                android:padding="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/blue_300" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/setDetail_dash"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/blue_300" />

            <TextView
                android:id="@+id/setDetail_scoreAthlete2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:padding="20dp"
                android:text="@{set.parseScoreAthlete(1)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/blue_300" />

            <TextView
                android:id="@+id/setDetail_athlete2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ic_circle_medium"
                android:contentDescription="@string/setDetail_athlete2_contentDescription"
                android:gravity="center"
                android:text="@{set.parseAthleteInitials(1)}"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:src="@tools:sample/avatars" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@{set.parseRemainingTime()}"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/blue_300" />
    </LinearLayout>
</layout>
